MMT-491: Fix spacing for Your Draft on dashboard

--- a/app/assets/stylesheets/components/_callout-box.scss
+++ b/app/assets/stylesheets/components/_callout-box.scss
@@ -25,8 +25,17 @@
     margin: 0;
   }
 
+  ul {
+    margin-top: 0.5em;
+    padding-left: 0;
+  }
+
   li {
     @include outer-container;
+
+    &:first-child {
+      padding-top: 0;
+    }
 
     a {
       color: $ocean-blue;
